# comp550-final

./: README.md  pyproject.toml
data/: angle_profile_embeddings_map.pickle
fake_profiles/: alt_atheism.json  comp_windows_x.json  misc_forsale.json  rec_autos.json  rec_sport_hockey.json  sci_med.json  sci_space.json  soc_religion_christian.json  talk_politics_guns.json
finetune/: adapters.npz  adapters4rank.npz  adapters8rank.npz  finetune.ipynb  lora.py  models.py  prep_data.ipynb
finetune/data/: test.jsonl  valid.jsonl
notebooks/: embeddings.ipynb  supervised-learning.ipynb  synthetic-profiles.ipynb
tables/supervised/: supervised_binary_scores.csv  supervised_multiclass_scores.csv  supervised_scores.csv
