[tool.poetry]
name = "comp550-final"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.3.8"
instructor = "^0.4.2"
python-dotenv = "^1.0.0"
mlx = "^0.0.5"
sentencepiece = "^0.1.99"
torch = "^2.1.2"
scikit-learn = "^1.3.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
